remove footer
